Version 0.4.2

* Apply patch #1260533 Save Maximized state from Marc Deslauriers
* Character set fix from Jean-François Wauthy
* Fix Bug #1174339 audio cd: confused by files with identical basenames

Version 0.4.1

* Apply Milen's patch so we have a preference setting which determines if we ask on quit.
* Marco Meyerhofer patches (Nearly complete translation in german,  install help-files under /usr/share/gnome/help/, make help appear in yelp under Application/Accessories
* Fix stupid bug with window sizing and not checking arguments.
* Apply patch so that the progress dialogs show output button says hide when the output is showing.
* Use the device node rather than scsi id for burning dvd isos so growisofs works with external burners.
* Fix silly bug where progress dialog does not pulse if media is already inserted.
* Don't prompt for a disk when copying data/audio cds if the disk is already inserted.
* Make sure we unmount read devices and not just writers.
* Fix Bug #1146159 wrong named button
* Fix Bug #1219474 "View output" does not change to "Hide output"
* Fix Bug #1152328 audio-CD: High CPU usage
* Fix Bug #1223590 Burning 48kHz MP3s fails
* Fix Bug #1243633 judging mp3 size via id tag length?
* Fix Bug #1146164 glitches in the german translation.
* Fix Bug #1161911 File sizes are wrong (regular files)
* Fix RFE #1162569 Support for long filenames (backups)
* Fix RFE #1206531 Volume label for DVD
* Fix REF #1144905 DVD iso flags
* Fix Bug #1243700 Exit with "Killed" error when burning to CD
* Fix Bug #1241361 Segfault when burning data DVD
* Fix Bug #1214261 GnomeBaker reports an error and core dumps
* Fix Bug #1259001 gnomebaker.desktop menu item has wrong category
* Fix Bug #1247337 s/view/hide/
* Start using glib g_spawn code as it's better than the exec code I wrote.
* Fix threading problem which would crash GB on some machines.
* Fix regression in audio cd copying.
* Apply patch from Jens Georg so that we use gstreamer to read tags.